<resources>
    <string name="app_name">puzzle of Saidkamol</string>
    <string name="play">play</string>
    <string name="txt1">moves</string>
    <string name="txt2">your time is 00:00</string>
    <string name="txt3">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="palonkas">palonkas</string>
    <string name="moves">MOVES</string>
    <string name="time">TIME</string>
    <string name="_123">123</string>
    <string name="default_time">00:00</string>
    <string name="restart">restart</string>
    <string name="save">save</string>
    <string name="no_records">there is no records</string>
    <string name="info">info</string>
    <string name="expert">expert</string>
    <string name="hard">hard</string>
    <string name="medium">medium</string>
    <string name="normal">normal</string>
    <string name="easy">Easy</string>
</resources>