<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/win_background"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/win" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt1"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/score_moves"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="time"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/score_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txt3"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/saveName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:ems="10"
            android:textColor="#000000"
            android:hint="enter your name"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yoxshi_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/play_button_background"
                android:backgroundTint="@color/design_default_color_primary_dark"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/play_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:foreground="?selectableItemBackground"
                android:background="@drawable/play_button_background"
                android:backgroundTint="@color/design_default_color_primary_dark"
                android:text="@string/restart"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>